--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,30 +6,54 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.otoprenuer.vendor_otopreneur.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_bengkel_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_bengkel"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@mipmap/ic_bengkel"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar">
-        <activity android:name="com.otoprenuer.vendor_otopreneur.Order.OrderAcceptActivity" android:parentActivityName="com.otoprenuer.vendor_otopreneur.Order.DetailOrderActivity"></activity>
-        <activity android:name="com.otoprenuer.vendor_otopreneur.Order.DetailOrderActivity" android:parentActivityName="com.otoprenuer.vendor_otopreneur.Dashboard.OrderActivity" />
-        <activity android:name="com.otoprenuer.vendor_otopreneur.History_Order.DetailHistoryActivity" android:parentActivityName="com.otoprenuer.vendor_otopreneur.Dashboard.HistoryOrderActivity" />
-        <activity android:name="com.otoprenuer.vendor_otopreneur.Dashboard.SettingsActivity" android:parentActivityName="com.otoprenuer.vendor_otopreneur.DashboardActivity" />
-        <activity android:name="com.otoprenuer.vendor_otopreneur.Dashboard.OrderActivity" android:parentActivityName="com.otoprenuer.vendor_otopreneur.DashboardActivity" />
-        <activity android:name="com.otoprenuer.vendor_otopreneur.Dashboard.HistoryOrderActivity" android:parentActivityName="com.otoprenuer.vendor_otopreneur.Dashboard.OrderActivity" />
-        <activity android:name="com.otoprenuer.vendor_otopreneur.Dashboard.DaftarServiceActivity" android:parentActivityName="com.otoprenuer.vendor_otopreneur.Dashboard.OrderActivity"/>
-        <activity android:name="com.otoprenuer.vendor_otopreneur.Daftar_Service.DetailServiceActivity" android:parentActivityName="com.otoprenuer.vendor_otopreneur.Dashboard.OrderActivity" />
-        <activity android:name="com.otoprenuer.vendor_otopreneur.Daftar_Service.AddServiceActivity" android:parentActivityName="com.otoprenuer.vendor_otopreneur.Dashboard.DaftarServiceActivity"/>
-        <activity android:name="com.otoprenuer.vendor_otopreneur.IsiInput" android:parentActivityName="com.otoprenuer.vendor_otopreneur.LoginActivity">
+        <activity android:name=".Settings.UbahPassword" android:parentActivityName=".Dashboard.SettingsActivity"></activity>
+        <activity
+            android:name=".Settings.DataPersonal"
+            android:parentActivityName=".Dashboard.SettingsActivity" />
+        <activity
+            android:name=".Order.OrderAcceptActivity"
+            android:parentActivityName=".Order.DetailOrderActivity" />
+        <activity
+            android:name=".Order.DetailOrderActivity"
+            android:parentActivityName=".Dashboard.OrderActivity" />
+        <activity
+            android:name=".History_Order.DetailHistoryActivity"
+            android:parentActivityName=".Dashboard.HistoryOrderActivity" />
+        <activity
+            android:name=".Dashboard.SettingsActivity"
+            android:parentActivityName=".DashboardActivity" />
+        <activity
+            android:name=".Dashboard.OrderActivity"
+            android:parentActivityName=".DashboardActivity" />
+        <activity
+            android:name=".Dashboard.HistoryOrderActivity"
+            android:parentActivityName=".Dashboard.OrderActivity" />
+        <activity
+            android:name=".Dashboard.DaftarServiceActivity"
+            android:parentActivityName=".Dashboard.OrderActivity" />
+        <activity
+            android:name=".Daftar_Service.DetailServiceActivity"
+            android:parentActivityName=".Dashboard.OrderActivity" />
+        <activity
+            android:name=".Daftar_Service.AddServiceActivity"
+            android:parentActivityName=".Dashboard.DaftarServiceActivity" />
+        <activity
+            android:name=".IsiInput"
+            android:parentActivityName=".LoginActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.otoprenuer.vendor_otopreneur.LoginActivity"/>
+                android:value="com.otoprenuer.vendor_otopreneur.LoginActivity" />
         </activity>
-        <activity android:name="com.otoprenuer.vendor_otopreneur.DashboardActivity" />
-        <activity android:name="com.otoprenuer.vendor_otopreneur.LoginActivity">
+        <activity android:name=".DashboardActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
